# DX12ComputeTmpl

./: .gitignore  CMakeLists.txt  DX12ComputeTmpl.sln  DX12ComputeTmpl.vcxproj  InstallPackages.cmd  README.md  dx12.cpp  dx12.h  main.cpp  shadertoolsconfig.json
InstallPackages/: InstallPackages.sln
InstallPackages/InstallPackages/: InstallPackages.csproj
Shaders/: OneSweep.hlsl  Shader.hlsl
cmake/: create_target.cmake
samples/: CMakeLists.txt
samples/Input/: CMakeLists.txt  main.cpp
samples/Input/Shaders/: Shader.hlsl
samples/OneSweep/: CMakeLists.txt  main.cpp
samples/OneSweep/Shaders/: OneSweep.hlsl
samples/Simple/: CMakeLists.txt  main.cpp
samples/Simple/Shaders/: Shader.hlsl
src/: dx12.hpp  renderShaders.hlsl
